Remove delay on mobile devices & fix date select numbers

--- a/core/static/core/css/calendar/view.css
+++ b/core/static/core/css/calendar/view.css
@@ -148,6 +148,9 @@ hr {
 .fc-scrollgrid a {
     color: var(--dark-grey) !important; 
 }
+.fc-scrollgrid a[selected]{
+    color: white !important;
+}
 .tag-section {
     display: flex;
     flex-flow: row wrap;
